('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.10.0

	- Add the 'DBD' trace setting to output only non-DBI trace messages. [GSM]

2.9.2 Released August 18, 2008 (subversion r11664)

	- Empty Postgres arrays should return empty Perl arrays, not undef.
		(CPAN bug #38552) [David E. Wheeler]

2.9.1 Released August 17, 2008 (subversion r11660)

	- Return undef when mapping Postgres array to Perl array and 
		the array is empty '{}'. (CPAN bug #38552) [GSM]
	- Minor documentation improvements. [GSM]

2.9.0 Released August 3, 2008 (subversion r11624)

	- Add support for database handle attribute "ReadOnly". This allows 
		use of $dbh->{ReadOnly} = 1 to enforce read only mode at 
		the server level. [GSM]
	- Move PQexec structures to statement handle, to prevent 
		excessive malloc and free within execute function. [GSM]
	- Add more attribute tests, improve testing system. [GSM]
	- Many documentation improvements. [GSM]
	- Win32 build improvements [T.J. Ferraro]

2.8.7 Released July 24, 2008 (subversion r11582)

	- Modify test scripts to work better on FreeBSD boxes. [GSM]
	- Much documentation improvement and POD tweaking. [GSM]

2.8.6 Released July 21, 2008 (subversion r11558)

	- More testing improvements to increase odds of all tests being
		run, especially when testing as root. [GSM]

2.8.5 Released July 13, 2008 (subversion r11529)

	- Fix an obscure bug in which a coredump occurs if client_min_messages 
	  	is set to DEBUG3 or greater, and we then exit without disconnecting 
		while AutoCommit is off. The new behavior is to simply not attempt to 
		output the debugging information about the final 'rollback'. [GSM]
	- More documentation improvements. [GSM]

2.8.4 Released July 10, 2008 (subversion r11520)

	- Minor Perl::Critic test adjustments. [GSM]
	- Documentation enhancements. [GSM]
	- Yet more minor testing tweaks. [GSM]

2.8.3 Released July 6, 2008 (subversion r11495)
